--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gyanugupta95.github.io/api-fetch",
+  "homepage": "https://gyanugupta95.github.io/project3",
   "name": "project3",
   "version": "0.1.0",
   "private": true,
